--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	background-color: rgb(247, 247, 247);
 	color: rgb(40, 40, 40);
 	margin: 0px;
