--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,8 @@
 body {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	background-color: rgb(247, 247, 247);
+	font-family: 'Open Sans', sans-serif;
+	background-color: rgb(255, 255, 255);
 	color: rgb(40, 40, 40);
 	margin: 0px;
-	text-align: center;
 }
 
 h1 {
@@ -22,7 +21,7 @@ h3 {
 p {
 	margin: auto;
 	max-width: 900px;
-	font-size: 24px;
+	font-size: 18px;
 	line-height: 1.6;
 	padding-bottom: 36px;
 }
@@ -52,23 +51,48 @@ p {
 
 /* Image banner on the home page*/
 #banner {
-	background-color: rgb(247, 247, 247);
-	margin-bottom: 25px;
+	background-color: rgb(255, 255, 255);
+	/*background-image: url('/data/style-images/mountains.jpg'); */
+	/* background-size: 100% 100%; */
+	margin-bottom: 0px;
 	text-align: center;
+}
+
+#banner-bottom {
+	background-color: rgb(61, 61, 61);
+	color: rgb(230, 230, 230);
+	margin-top: 0px;
+}
+
+/* Contact icons at the bottom of every page */
+.icon {
+	margin: 7px;
+	position: relative;
+	top: 0;
+	transition: top ease 0.25s;
+	width: 25px;
+	height: 25px;
+}
+
+.icon:hover {
+	top: -5px;
+	width: 25px;
+	height: 25px;
 }
 
 .middle-left {
 	text-align: center;
 	position: absolute;
 	top: 250px;
-	left: 25%;
+	left: 23%;
 }
 
+/* Project image gallery on projects page */
 .middle-right {
 	text-align: center;
 	position: absolute;
 	top: 250px;
-	right: 25%;
+	right: 24%;
 }
 
 .row {
@@ -77,14 +101,14 @@ p {
 }
 
 .column-left {
-	background-color: rgba(93, 173, 226, 0.63);
+	background-color: rgba(37, 145, 216, 0.7);
 	flex: 50%;
 	padding: 50px;
 	padding-left: 100px;
 }
 
 .column-right {
-	background-color: rgba(243, 157, 18, 0.692);
+	background-color: rgba(243, 157, 18, 0.7);
 	flex: 50%;
 	padding: 50px;
 	padding-right: 100px;
@@ -93,4 +117,76 @@ p {
 .row p {
 	margin: auto;
 	font-size: 20px;
+}
+
+.center-text {
+	text-align: center;
+}
+
+.left {
+	position: relative;
+	width: 100%;
+	max-width: 320px;
+	height: auto;
+	float: left;
+}
+
+.right {
+	position: relative;
+	width: 100%;
+	max-width: 370px;
+	height: auto;
+	float: right;
+}
+
+.project {
+	opacity: 1;
+	display: block;
+	width: 100%;
+	height: auto;
+	transition: 0.5s ease;
+	backface-visibility: hidden;
+}
+
+.middle {
+	transition: 0.5s ease;
+	opacity: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	text-align: center;
+}
+
+.left:hover .project {
+	opacity: 0.3;
+}
+
+.left:hover .middle {
+	opacity: 1;
+}
+
+.right:hover .project {
+	opacity: 0.3;
+}
+
+.right:hover .middle {
+	opacity: 1;
+}
+
+.snippet {
+	background-color: white;
+	font-family: Helvetica;
+	font-size: 20px;
+	color: black;
+	padding: 16px 32px;
+}
+
+/* Text formatting on about page */
+
+.about {
+	text-align: left;
+	padding-left: 25%;
+	padding-right: 25%;
 }
