--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ p {
 .left {
 	position: relative;
 	width: 100%;
-	max-width: 320px;
+	max-width: 350px;
 	height: auto;
 	float: left;
 }
@@ -134,7 +134,7 @@ p {
 .right {
 	position: relative;
 	width: 100%;
-	max-width: 370px;
+	max-width: 350px;
 	height: auto;
 	float: right;
 }
@@ -189,4 +189,17 @@ p {
 	text-align: left;
 	padding-left: 25%;
 	padding-right: 25%;
+}
+
+iframe {
+	display: block;
+	border-style: none;
+	width: 750px;
+	height: 550px;
+	margin: 0 auto;
+	background-color: #777;
+}
+
+li {
+	margin-bottom: 5px;
 }
