--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 h3 {
-	font-size: 24px;
+	font-size: 22px;
 	text-align: center;
 }
 p {
@@ -97,7 +97,7 @@ p {
 
 .row {
 	display: flex;
-	margin-bottom: 50px;
+	margin-bottom: 0px;
 }
 
 .column-left {
@@ -202,4 +202,17 @@ iframe {
 
 li {
 	margin-bottom: 5px;
+}
+
+.column {
+	float: left;
+	width: 50%;
+	padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+	content: '';
+	display: table;
+	clear: both;
 }
